WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296562
Flex item does not shrink around image
https://bugs.webkit.org/show_bug.cgi?id=296562
Summary
Flex item does not shrink around image
Razvan Caliman
Reported
2025-07-28 04:15:59 PDT
A flex item containing an image resized to `height:100%` of its explicitly-sized flex container does not shrink to warp around the image. See attached test case. The issue seems related to the <img> not having explicit dimensions, similar to
https://bugs.webkit.org/show_bug.cgi?id=296560
Chrome 140 and Firefox 142 render as expected. Safari 18.5 does not.
Attachments
Test Case
(57.01 KB, application/zip)
2025-07-28 04:19 PDT
,
Razvan Caliman
no flags
Details
Screenshot of test case in Safari
(499.08 KB, image/png)
2025-07-28 04:20 PDT
,
Razvan Caliman
no flags
Details
Screenshot of test case in Firefox
(523.51 KB, image/png)
2025-07-28 04:20 PDT
,
Razvan Caliman
no flags
Details
Screenshot of test case in Chrome
(495.05 KB, image/png)
2025-07-28 04:20 PDT
,
Razvan Caliman
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-07-28 04:17:03 PDT
<
rdar://problem/156902823
>
Razvan Caliman
Comment 2
2025-07-28 04:19:44 PDT
Created
attachment 476197
[details]
Test Case
Razvan Caliman
Comment 3
2025-07-28 04:20:05 PDT
Created
attachment 476198
[details]
Screenshot of test case in Safari
Razvan Caliman
Comment 4
2025-07-28 04:20:25 PDT
Created
attachment 476199
[details]
Screenshot of test case in Firefox
Razvan Caliman
Comment 5
2025-07-28 04:20:43 PDT
Created
attachment 476200
[details]
Screenshot of test case in Chrome
Yulun Wu
Comment 6
2026-03-02 17:02:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59755
EWS
Comment 7
2026-03-19 02:56:44 PDT
Committed
309544@main
(eb13205ab9fc): <
https://commits.webkit.org/309544@main
> Reviewed commits have been landed. Closing PR #59755 and removing active labels.
Sammy Gill
Comment 8
2026-04-16 12:14:47 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/59285
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug